(1)adds msg.c msg.h (2)implements uart message rx and event loop

--- a/STM32/MDK-ARM/sensor_network.uvprojx
+++ b/STM32/MDK-ARM/sensor_network.uvprojx
@@ -425,6 +425,11 @@
               <FileType>1</FileType>
               <FilePath>..\Src\switch.c</FilePath>
             </File>
+            <File>
+              <FileName>msg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\msg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
